# modern-data-stack

./: .env.example  .gitignore  README.md  TECHNICAL.md  ingest.py  pipeline.py  pyproject.toml
.github/: copilot-instructions.md
data/raw/github/_dlt_loads/: github_repos__1771354557.9745178.jsonl
data/raw/github/_dlt_pipeline_state/: github_repos_pipeline__1771354557.9745178__799b3347d537a0cda327ead1a17e05e44a3de6a92592d003b64f6fad298517d4.jsonl
data/raw/github/_dlt_version/: github_repos__1771354561.6777816__799b3347d537a0cda327ead1a17e05e44a3de6a92592d003b64f6fad298517d4.jsonl
transform/: __init__.py  marts.py  staging.py
